--- a/NNet/NNetSimu/NNetSimu.rc
+++ b/NNet/NNetSimu/NNetSimu.rc
@@ -6,7 +6,6 @@
 #include <commctrl.h>
 #include <richedit.h>
 #include "Resource.h"
-#include "version.h"
 #include "win32_utilities.rc"
 
 //
@@ -37,10 +36,10 @@ IDD_ABOUTBOX DIALOG 0, 0, 170, 74
 STYLE DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
 CAPTION "About NNetSimu"
 {
-    LTEXT         VER_PRODUCTNAME_STR, IDC_STATIC,    42, 14, 114,  8, SS_LEFT
-	LTEXT         "Compile time",      IDC_STATIC,    42, 26, 114,  8, SS_LEFT
-	LTEXT         "",                  IDD_TIMESTAMP, 42, 38, 114,  8, SS_LEFT
-	DEFPUSHBUTTON "OK",                IDOK,         113, 53,  50, 14, WS_GROUP
+    // LTEXT         VER_PRODUCTNAME_STR, IDC_STATIC,    42, 14, 114,  8, SS_LEFT
+	// LTEXT         "Compile time",      IDC_STATIC,    42, 26, 114,  8, SS_LEFT
+	// LTEXT         "",                  IDD_TIMESTAMP, 42, 38, 114,  8, SS_LEFT
+	// DEFPUSHBUTTON "OK",                IDOK,         113, 53,  50, 14, WS_GROUP
 }
 
 //
