EditLineBox without resource

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -15,4 +15,4 @@ ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW -321 1825 301 281
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_SIG_DESIGNER -1215 1419 813 638
-ShowWindow IDM_SIG_DESIGNER SW_HIDE
+ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
