--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
@@ -185,5 +185,8 @@
     <ClCompile Include="Win32_DialogTemplate.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="AAA.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
