--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -9,10 +9,10 @@ ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_DESC_WINDOW -350 1275 301 301
 ShowWindow IDM_DESC_WINDOW SW_HIDE
 MoveWindow IDM_MONITOR_WINDOW -1692 1581 490 290
-ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PARAM_WINDOW -310 1560 301 261
+ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+MoveWindow IDM_PARAM_WINDOW -310 1560 301 301
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW -321 1825 301 281
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_SIG_DESIGNER -1195 1287 813 607
+MoveWindow IDM_SIG_DESIGNER -849 1415 813 607
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
