--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -14,5 +14,5 @@ MoveWindow IDM_PARAM_WINDOW -310 1560 301 301
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW -321 1825 301 281
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_SIG_DESIGNER -849 1415 813 607
-ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
+MoveWindow IDM_SIG_DESIGNER -1227 1427 813 607
+ShowWindow IDM_SIG_DESIGNER SW_HIDE
