--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
@@ -183,5 +183,11 @@
     <ClCompile Include="Win32_Util_Resource.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="CommandStack.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="CommandStack.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
