--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj
@@ -161,9 +161,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CommandStack.cpp" />
-    <ClCompile Include="CommandStack.ixx" />
     <ClCompile Include="D2D_DrawContext.cpp" />
     <ClCompile Include="D2D_DrawContext.ixx" />
+    <ClCompile Include="Commands.ixx" />
     <ClCompile Include="Win32_AboutBox.cpp" />
     <ClCompile Include="Win32_AboutBox.ixx" />
     <ClCompile Include="Win32_ActionTimer.ixx" />
@@ -178,7 +178,6 @@
     <ClCompile Include="Win32_BaseDialog.cpp" />
     <ClCompile Include="Win32_BaseRefreshRate.cpp" />
     <ClCompile Include="Win32_BaseWindow.cpp" />
-    <ClCompile Include="Win32_Command.ixx" />
     <ClCompile Include="Win32_Controls.cpp" />
     <ClCompile Include="Win32_Controls.ixx" />
     <ClCompile Include="Win32_DialogTemplate.ixx" />
