--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -99,8 +99,8 @@
     <ClCompile Include="ConnAnimationCommand.cpp" />
     <ClCompile Include="ConnAnimationCommand.ixx" />
     <ClCompile Include="Connect2NeuronCommand.ixx" />
-    <ClCompile Include="ConnectCreateForkCommand.ixx" />
-    <ClCompile Include="ConnectCreateSynapseCommand.ixx" />
+    <ClCompile Include="ConnectCreateForkCmd.ixx" />
+    <ClCompile Include="ConnectCreateSynapseCmd.ixx" />
     <ClCompile Include="CoordAnimation.ixx" />
     <ClCompile Include="CreateForkCommand.ixx" />
     <ClCompile Include="CreateSynapseCommand.ixx" />
