--- a/NNet/NNetModel/NNetModel.vcxproj.filters
+++ b/NNet/NNetModel/NNetModel.vcxproj.filters
@@ -23,9 +23,6 @@
     <ClCompile Include="Analyzer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="BaseKnot.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="CopySelectedNobs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -239,9 +236,6 @@
     <ClCompile Include="Nob.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="BaseKnot.ixx">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Pipe.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -287,7 +281,7 @@
     <ClCompile Include="Fork.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="BaseKnotFactory.ixx">
+    <ClCompile Include="PosNobFactory.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="StdSigGen.ixx">
