--- a/NNet/NNetModel/NNetModel.vcxproj.filters
+++ b/NNet/NNetModel/NNetModel.vcxproj.filters
@@ -293,5 +293,8 @@
     <ClCompile Include="PosNob.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PosNob.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
