--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -49,6 +49,7 @@
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="Model.ixx" />
     <ClCompile Include="ModelDescription.ixx" />
+    <ClCompile Include="PosNob.cpp" />
     <ClCompile Include="PosNobFactory.ixx" />
     <ClCompile Include="MonitorData.cpp" />
     <ClCompile Include="MonitorData.ixx" />
