--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -85,6 +85,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AddNobsCommand.ixx" />
+    <ClCompile Include="DeleteForkOutputCmd.ixx" />
+    <ClCompile Include="DeleteNeuronInputCmd.ixx" />
     <ClCompile Include="ExtendOutputLineCmd.ixx" />
     <ClCompile Include="AddPipe2NeuronCmd.ixx" />
     <ClCompile Include="AddSensorSignalCmd.ixx" />
@@ -104,8 +106,6 @@
     <ClCompile Include="CoordAnimation.ixx" />
     <ClCompile Include="CreateForkCommand.ixx" />
     <ClCompile Include="CreateSynapseCommand.ixx" />
-    <ClCompile Include="DeleteBaseKnotCmd.cpp" />
-    <ClCompile Include="DeleteBaseKnotCmd.ixx" />
     <ClCompile Include="DeleteIoConnectorCmd.ixx" />
     <ClCompile Include="DeletePipeCommand.ixx" />
     <ClCompile Include="DeleteSelectionCommand.ixx" />
