--- a/NNet/ModelIO/ModelIO.vcxproj
+++ b/NNet/ModelIO/ModelIO.vcxproj
@@ -165,8 +165,9 @@
     <ClCompile Include="NNetModelStorage.ixx" />
     <ClCompile Include="NNetModelIO.ixx" />
     <ClCompile Include="NNetWrapperBase.ixx" />
+    <ClCompile Include="NobIo.cpp" />
     <ClCompile Include="WrapActiveSigGen.ixx" />
-    <ClCompile Include="WrapCreateNob.ixx" />
+    <ClCompile Include="NobIo.ixx" />
     <ClCompile Include="WrapDescription.ixx" />
     <ClCompile Include="WrapGlobalParameter.ixx" />
     <ClCompile Include="WrapNrOfNobs.ixx" />
