fixed bugs in deletion of nobs

--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -87,6 +87,7 @@
     <ClCompile Include="AddNobsCommand.ixx" />
     <ClCompile Include="DeleteForkOutputCmd.ixx" />
     <ClCompile Include="DeleteNeuronInputCmd.ixx" />
+    <ClCompile Include="DeleteSensorCommand.ixx" />
     <ClCompile Include="ExtendOutputLineCmd.ixx" />
     <ClCompile Include="AddPipe2NeuronCmd.ixx" />
     <ClCompile Include="AddSensorSignalCmd.ixx" />
