--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -144,9 +144,6 @@
     <ClCompile Include="SelectNobsInRectCommand.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="SelectSubtreeCommand.ixx">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="SelSigGenClientsCmd.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -223,6 +220,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DeleteSensorCommand.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SelectAllConnectedCmd.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
