--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -76,6 +76,9 @@
     <ProjectReference Include="..\..\Toolbox\Win32_utilities\Win32_utilities.vcxproj">
       <Project>{7c1b51ed-011d-4b73-867c-ac23f0a9e6d1}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\..\Toolbox\Wrappers\Wrappers.vcxproj">
+      <Project>{dd5676cc-9c49-4ac7-82ff-5ce0f2f7bfed}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\ModelIO\ModelIO.vcxproj">
       <Project>{e33a1409-350a-457f-ba47-e84659426576}</Project>
     </ProjectReference>
@@ -139,7 +142,6 @@
     <ClCompile Include="SelectAllCommand.ixx" />
     <ClCompile Include="SelectAllConnectedCmd.ixx" />
     <ClCompile Include="SelectionCommand.ixx" />
-    <ClCompile Include="SelectNobCommand.ixx" />
     <ClCompile Include="SelSigGenClientsCmd.ixx" />
     <ClCompile Include="SetActiveSigGenCmd.ixx" />
     <ClCompile Include="SetNobCommand.ixx" />
