Analyzer completely removed

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -13,6 +13,6 @@ ShowWindow IDM_MONITOR_WINDOW SW_HIDE
 MoveWindow IDM_PARAM_WINDOW -310 1560 301 301
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW -321 1825 301 281
-ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_SIG_DESIGNER 488 395 813 851
-ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
+ShowWindow IDM_PERF_WINDOW SW_HIDE
+MoveWindow IDM_SIG_DESIGNER -981 1210 813 851
+ShowWindow IDM_SIG_DESIGNER SW_HIDE
