--- a/NNet/NNetSimu/MonitorConfigurations.cnf
+++ b/NNet/NNetSimu/MonitorConfigurations.cnf
@@ -58,3 +58,18 @@ MonitorConfiguration  "WindowConfiguration4.cnf"
 1    # primary monitor
 0   # end of MonitorConfiguration
 
+MonitorConfiguration  "WindowConfiguration5.cnf"
+1   # monitor number
+0 0 2194 1234   # monitor rectangle
+0 0 2194 1186   # work area rectangle
+1    # primary monitor
+2   # monitor number
+-1920 1080 0 2160   # monitor rectangle
+-1920 1080 0 2112   # work area rectangle
+0    # secondary monitor
+3   # monitor number
+3840 0 6034 1234   # monitor rectangle
+3840 0 6034 1186   # work area rectangle
+0    # secondary monitor
+0   # end of MonitorConfiguration
+
