bug in ConnAnimationCommand::Undo fixed

--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -129,6 +129,7 @@
     <ClCompile Include="NewIoLinePairCmd.ixx" />
     <ClCompile Include="NewSigGenCmd.ixx" />
     <ClCompile Include="NNetCommand.ixx" />
+    <ClCompile Include="NNetCommandStack.ixx" />
     <ClCompile Include="NNetModelCommands.cpp" />
     <ClCompile Include="NNetModelCommands.ixx" />
     <ClCompile Include="PlugIoConnectors.ixx" />
