Detach Synapse by moving away from main Pipe

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1901 1155 1537 925
+MoveWindow IDM_APPL_WINDOW -1848 1125 1537 925
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CRSR_WINDOW -303 1385 301 226
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MINI_WINDOW -302 1086 301 301
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1893 1207 1521 843
+MoveWindow IDM_MAIN_WINDOW -1840 1177 1521 843
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_DESC_WINDOW -350 1275 301 301
 ShowWindow IDM_DESC_WINDOW SW_HIDE
-MoveWindow IDM_MONITOR_WINDOW -905 1455 490 290
-ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+MoveWindow IDM_MONITOR_WINDOW -768 1605 490 290
+ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PARAM_WINDOW -310 1560 301 301
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW -321 1825 301 281
 ShowWindow IDM_PERF_WINDOW SW_HIDE
 MoveWindow IDM_SIG_DESIGNER 91 222 813 809
-ShowWindow IDM_SIG_DESIGNER SW_HIDE
+ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
