fixed bug: Sensor points not visible

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -9,10 +9,10 @@ ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_DESC_WINDOW -350 1275 301 301
 ShowWindow IDM_DESC_WINDOW SW_HIDE
 MoveWindow IDM_MONITOR_WINDOW -894 1454 762 290
-ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_MONITOR_WINDOW SW_HIDE
 MoveWindow IDM_PARAM_WINDOW -310 1560 301 301
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW -321 1825 301 281
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_SIG_DESIGNER 1223 672 835 479
-ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
+ShowWindow IDM_SIG_DESIGNER SW_HIDE
