--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -89,6 +89,7 @@
   <ItemGroup>
     <ClCompile Include="AddNobsCommand.ixx" />
     <ClCompile Include="ConnSynapse2NewPipeCmd.ixx" />
+    <ClCompile Include="CreateInitialNobsCmd.ixx" />
     <ClCompile Include="DeleteForkOutputCmd.ixx" />
     <ClCompile Include="DeleteNeuronInputCmd.ixx" />
     <ClCompile Include="DeleteSensorCommand.ixx" />
